Reiniciado os estilos

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,160 +1,4 @@
-.background-top {
-    height: 400px;
-    background-image: url('https://static.pexels.com/photos/546819/pexels-photo-546819.jpeg');
-    background-size: 100% 200%;
-    margin-top: -20px;
-    padding-top: 10%;
-}
-
-.background-top span.border {
-    background-color: #111111;
-    color: #ffffff;
-    padding: 18px;
-    font-size: 25px;
-    letter-spacing: 10px;
-}
-
-p.text {
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    font: 16px "Lato", sans-serif;
-    color: #ffffff;
-    margin-top: 40px;
-}
-
-.repos .text-center {
-    margin-top: 10px;
-    margin-bottom: 20px;
-}
-
-.home a {
-    width: 320px;
-    border-radius: 2px;
-}
-
-.form-news input {
-    width: 60%;
-    float: left;
-    height: 46px;
-    border-radius: 5px 0 0 5px;
-    margin-left: 15%;
-    margin-top: 15px;
-}
-
-.form-news .btn {
-    float: left;
-    border-radius: 0 5px 5px 0;
-    margin-top: 15px;
-}
-
-.newsletter {
-    height: 300px;
-    background: #2980b9;
-    color: #ffffff;
-    padding-top: 60px;
-    margin-top: 50px;
-}
-
-.full {
-    width: 100%;
-}
-
-.gap {
-    height: 30px;
-    width: 100%;
-    clear: both;
-    display: block;
-}
-
-.footer {
-    background: #edeff1;
-    height: auto;
-    padding-bottom: 30px;
-    position: relative;
-    width: 100%;
-    border-bottom: 1px solid #cccccc;
-    border-top: 1px solid #dddddd;
-}
-
-.footer p {
-    margin: 0;
-}
-
-.footer img {
-    max-width: 100%;
-}
-
-.footer h3 {
-    border-bottom: 1px solid #bac1c8;
-    color: #54697e;
-    font-size: 18px;
-    font-weight: 600;
-    line-height: 27px;
-    padding: 40px 0 10px;
-    text-transform: uppercase;
-}
-
-.footer ul {
-    font-size: 13px;
-    list-style-type: none;
-    margin-left: 0;
-    padding-left: 0;
-    margin-top: 15px;
-    color: #7f8c8d;
-}
-
-.footer ul li a {
-    padding: 0 0 5px 0;
-    display: block;
-}
-
-.footer a {
-    color: #78828d;
-}
-
-.supportLi h4 {
-    font-size: 20px;
-    font-weight: lighter;
-    line-height: normal;
-    margin-bottom: 0 !important;
-    padding-bottom: 0;
-}
-
-.bg-gray {
-    background-image: -moz-linear-gradient(center bottom, #bbbbbb 0%, #f0f0f0 100%);
-    box-shadow: 0 1px 0 #b4b3b3;
-}
-
-.footer-bottom {
-    background: #e3e3e3;
-    border-top: 1px solid #dddddd;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.footer-bottom p.pull-left {
-    padding-top: 6px;
-}
-
-.navbar.transparent.navbar-inverse .navbar-inner {
-    border-width: 0;
-    -webkit-box-shadow: 0 0;
-            box-shadow: 0 0;
-    background-color: rgba(0,0,0,.0);
-    background-image: -webkit-gradient(linear, 50.00% .00%, 50.00% 100.00%, color-stop( 0% , rgba(0,0,0,.00)),color-stop( 100% , rgba(0,0,0,.00)));
-    background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,.00) 0%,rgba(0,0,0,.00) 100%);
-    background-image:         linear-gradient(180deg,rgba(0,0,0,.00) 0%,rgba(0,0,0,.00) 100%);
-}
-
-.repositories {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.desc-repository {
-    min-height: 150px;
-}
-
-.desc-repository p {
-    margin-top: 15px;
+body {
+    background: #1e2225;
+    font-family: 'Droid Sans Mono', monospace;
 }
