--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -10,7 +10,10 @@
     align-items: center;
 }
 
-.header__logo {
+.header__logo,
+.header__logo:link,
+.header__logo:visited,
+.header__logo:active {
     background-color: #ffffff;
     color: #000000;
     padding: 18px;
@@ -19,6 +22,7 @@
     margin-top: 50px;
     font-weight: 900;
     text-transform: uppercase;
+    text-decoration: none;
 }
 
 .header__description {
