--- a/src/components/Repositories/style.css
+++ b/src/components/Repositories/style.css
@@ -3,15 +3,39 @@
     padding: 0 0;
 }
 
+.repositories__header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
 .repositories__title {
     font-weight: 600;
     text-transform: uppercase;
     color: #ffffff;
     font-size: 22px;
-    border-left: 22px solid #ffffff;
+    border-left: 30px solid #ffffff;
     letter-spacing: 2px;
     padding-left: 20px;
 }
+
+.repositories__filter {
+    display: flex;
+    align-self: flex-end;
+}
+
+.repositories__filter__item {
+    color: #ffffff;
+    cursor: pointer;
+    margin-left: 40px;
+    list-style: square;
+    border-bottom: 1px solid transparent;
+}
+
+.repositories__filter__item:active {
+    border-bottom: 1px dashed #ffffff;
+}
+
 .repositories__list {
     display: flex;
     flex-wrap: wrap;
@@ -26,3 +50,4 @@
 .repositories__list > div {
     margin-bottom: 30px;
 }
+
