--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,13 +1,11 @@
 .header {
-    margin: 0 0 30px;
-    height: 200px;
+    margin: 50px 0 30px;
+    min-height: 200px;
     background-size: 100%;
 }
 
-.header__content {
+.header__branding {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 .header__logo,
@@ -19,10 +17,11 @@
     padding: 18px;
     font-size: 25px;
     display: inline-block;
-    margin-top: 50px;
     font-weight: 900;
     text-transform: uppercase;
     text-decoration: none;
+    width: 140px;
+    margin-right: 20px;
 }
 
 .header__description {
@@ -31,4 +30,29 @@
     font: 16px sans-serif;
     color: #ffffff;
     margin-top: 20px;
+}
+
+.header__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 30px 0;
+}
+
+@media (min-width: 750px) {
+    .header__branding {
+        display: block;
+    }
+
+    .header__logo,
+    .header__logo:link,
+    .header__logo:visited,
+    .header__logo:active {
+        width: auto;
+    }
+
+    .header__button {
+        justify-content: flex-end;
+        margin: auto;
+    }
 }
