--- a/src/components/Repository/style.css
+++ b/src/components/Repository/style.css
@@ -37,7 +37,7 @@
     margin: 0;
 }
 
-.repository__star {
+.repository__icons {
     background: rgba(255,255,255,.3);
     padding: 5px 10px;
     border-radius: 20px;
@@ -47,7 +47,13 @@
     align-items: center;
 }
 
-.repository__star__icon_star {
+.repository__icons__icon {
+    margin-right: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.repository__icons__icon__image {
     width: 16px;
     height: 16px;
     margin-right: 5px;
