--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,14 +1,10 @@
 .about {
-    padding: 0;
+    padding: 0 20px;
     margin: 0;
     list-style: none;
     color: #ffffff;
     height: 100%;
-    background: #67b26f;
-    background: linear-gradient(to bottom, #4ca2cd, #67b26f);
-    transition: all .25s linear;
     text-align: center;
-    height: 300px;
 }
 
 
@@ -16,7 +12,7 @@
     display: flex;
     width: 100%;
     justify-content: center;
-    margin: 10px 0;
+    margin: 30px 0;
 }
 
 .about__buttons .button {
@@ -26,5 +22,6 @@
 @media (min-width: 750px) {
     .about {
         padding: 20px 200px;
+        height: 300px;
     }
 }
