--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -1,11 +1,12 @@
 .button__link {
     background: #ffffff;
-    border-radius: 20px;
-    padding: 10px 20px;
+    border-radius: 6.25vw;
+    padding: 3.13vw 6.25vw;
     text-decoration: none;
     color: #000000;
     display: inline-block;
     transition: all .25s linear;
+    font-size: 4.38vw;
 }
 
 .button__link:link,
@@ -21,7 +22,22 @@
 }
 
 .button__icon {
-    width: 16px;
-    height: 16px;
-    margin-right: 10px;
+    width: 5.00vw;
+    height: 5.00vw;
+    margin-right: 3.13vw;
+}
+
+
+@media (min-width: 750px) {
+    .button__link {
+        border-radius: 20px;
+        padding: 10px 20px;
+        font-size: 14px;
+    }
+
+    .button__icon {
+        width: 16px;
+        height: 16px;
+        margin-right: 10px;
+    }
 }
