--- a/themes/backendbrasil/layout/layout.mustache
+++ b/themes/backendbrasil/layout/layout.mustache
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {% include 'partials/head' %}
+    {{> head}}
   </head>
   <body>
-    {{ content }}
   </body>
 </html>
