add gulpfile.js and organized some files, still need to improve build and explain everything within README.md add menu(and its responsive) add bulma css add home header(it isnt responsive yet) add basic structure for projects slider

--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -1,1 +1,62 @@
-teste
+<section class="columns is-centered is-vcentered home-header">
+  <article class="column is-two-fifths has-text-right">
+    <img src="/logo-horizontal.png" alt="Logo BackEndBrasil"/>
+  </article>
+
+  <article class="column is-two-fifths">
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+    </p>
+
+    <a class="button" href="">
+      <i class="fab fa-twitter"></i>
+      Twitter
+    </a>
+
+    <a class="button" href="">
+      <i class="fab fa-slack"></i>
+      Slack
+    </a>
+
+    <a class="button" href="">
+      <i class="fab fa-github"></i>
+      Github
+    </a>
+
+    <a class="button" href="">
+      <i class="fab fa-meetup"></i>
+      Meetup
+    </a>
+  </article>
+</section>
+
+<section class="tile is-ancestor home-projects">
+  <article class="tile is-2 is-vertical has-text-left">
+    <div class="tile">
+      <span class="is-size-4 has-text-weight-bold">
+        <i class="fas fa-code"></i>
+        /vagas
+      </span>
+    </div>
+
+    <div class="tile home-projects--p">
+      <p>teste</p>
+    </div>
+
+    <div class="tile">
+      <div class="tile">
+        <span class="icon">
+          <i class="fas fa-star"></i>
+        </span>
+        683
+      </div>
+
+      <div class="tile">
+        <span class="icon">
+          <i class="fas fa-star"></i>
+        </span>
+        683
+      </div>
+    </div>
+  </article>
+</section>
