--- a/themes/backendbrasil/layout/partials/head.hbs
+++ b/themes/backendbrasil/layout/partials/head.hbs
@@ -1,3 +1,6 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
 <title>Layout</title>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+<!-- Main CSS -->
+<link rel="stylesheet" href="/main.css" type="text/css" charset="utf-8">
