--- a/themes/backendbrasil/layout/partials/footer.hbs
+++ b/themes/backendbrasil/layout/partials/footer.hbs
@@ -1,1 +1,3 @@
 <script charset="utf-8" src="/main.js"></script>
+<script charset="utf-8" src="/repos.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
