--- a/themes/backendbrasil/layout/partials/footer.hbs
+++ b/themes/backendbrasil/layout/partials/footer.hbs
@@ -1,3 +1,2 @@
-<script charset="utf-8" src="/main.js"></script>
-<script charset="utf-8" src="/repos.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script charset="utf-8" src="/all.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
