--- a/themes/backendbrasil/source/_scss/home.scss
+++ b/themes/backendbrasil/source/_scss/home.scss
@@ -14,6 +14,11 @@
 .home-projects {
   $color: darken($secondary, 18%);
   overflow-x: auto;
+
+  &::-webkit-scrollbar { 
+    display: none; 
+  }
+
   padding-left: 5rem;
   transform: translateY(-3rem);
 
