--- a/themes/backendbrasil/source/main.scss
+++ b/themes/backendbrasil/source/main.scss
@@ -1,5 +1,6 @@
 @charset 'utf-9';
 @import '../../../node_modules/bulma/bulma.sass';
 @import '_scss/colors.scss';
+@import '_scss/bulma-modifications.scss';
 @import '_scss/menu.scss';
 @import '_scss/home.scss';
