--- a/themes/backendbrasil/source/_scss/bulma-modifications.scss
+++ b/themes/backendbrasil/source/_scss/bulma-modifications.scss
@@ -1,6 +1,48 @@
 .tile {
-  .is-flex-one-fifth {
-    width: initial;
-    flex: 0 0 calc(20% - 1.5rem);
+  &-is-flexible {
+    flex-flow: wrap row;
+    justify-content: space-between;
+  }
+
+  .is-flex {
+    &-full {
+      flex: 0 0 100%;
+    }
+
+    &-four-fifths {
+      flex: 0 0 calc(80% - 1.5rem);
+    }
+
+    &-three-quarters {
+      flex: 0 0 calc(75% - 1.5rem);
+    }
+
+    &-two-thirds {
+      flex: 0 0 calc(((100% / 3) * 2) - 1.5rem);
+    }
+
+    &-three-fifths {
+      flex: 0 0 calc(60% - 1.5rem);
+    }
+
+    &-half {
+      flex: 0 0 calc(50% - 1.5rem);
+    }
+
+    &-two-fifths {
+      flex: 0 0 calc(40% - 1.5rem);
+    }
+
+    &-one-third {
+      flex: 0 0 calc((100% / 3) - 1.5rem);
+    }
+
+    &-one-quarter {
+      flex: 0 0 calc(25% - 1.5rem);
+    }
+
+    &-one-fifth {
+      flex: 0 0 calc(20% - 1.5rem);
+    }
   }
 }
