--- a/themes/backendbrasil/source/main.scss
+++ b/themes/backendbrasil/source/main.scss
@@ -2,5 +2,6 @@
 @import '../../../node_modules/bulma/bulma.sass';
 @import '_scss/colors.scss';
 @import '_scss/bulma-modifications.scss';
+@import '_scss/components.scss';
 @import '_scss/menu.scss';
 @import '_scss/home.scss';
