--- a/themes/backendbrasil/source/_scss/home.scss
+++ b/themes/backendbrasil/source/_scss/home.scss
@@ -46,6 +46,10 @@
       padding-left: 1rem;
       padding-right: 1rem;
     }
+
+    @media screen and (min-width: $tablet) {
+      margin-bottom: 0 !important;
+    }
   }
 
   ul {
@@ -57,6 +61,27 @@
       padding: 0.25rem 0.5rem;
       margin-right: 0.5rem;
       margin-bottom: 0.75rem;
+    }
+  }
+}
+
+.posts {
+  &--title {
+    text-transform: uppercase;
+    padding-bottom: 0.75rem;
+  }
+
+  &--categories {
+    padding-top: 0.5rem;
+
+    li {
+      border-radius: 0.25rem;
+      color: #fff;
+      display: inline-block;
+      background-color: $primary;
+      padding: 0.25rem 0.5rem;
+      margin-right: 0.25rem;
+      margin-bottom: 0.5rem;
     }
   }
 }
