working on partners

--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -152,3 +152,25 @@
   </section>
 </section>
 
+<section class="partners tile is-ancestor has-default-padding">
+  <section class="tile is-parent is-vertical is-6">
+    <article class="tile is-child is-12">
+      <h2 class="is-size-2">Patrocinadores</h2>
+    </article>
+
+    <article class="tile is-child is-horizontal is-3">
+      <img src="/capivara.jpg" alt=""/>
+    </article>
+
+    <article class="tile is-child is-horizontal is-3">
+      <img src="/capivara.jpg" alt=""/>
+    </article>
+
+    <article class="tile is-child is-horizontal is-3">
+      <img src="/capivara.jpg" alt=""/>
+    </article>
+  </section>
+
+  <section class="tile is-parent is-vertical is-6">
+  </section>
+</section>
