fix partners and sponsors section

--- a/themes/backendbrasil/layout/index.hbs
+++ b/themes/backendbrasil/layout/index.hbs
@@ -159,7 +159,7 @@
     </article>
 
     {{#each site.data.partners_sponsors.sponsors}}
-      <article class="tile is-child is-flex-one-third">
+      <article class="tile is-child is-flex-one-quarter">
         <a href="{{url}}" title="{{name}}" target="_blank">
           <img src="{{imgsrc image}}" alt="{{image_description}}"/>
         </a>
@@ -167,13 +167,13 @@
     {{/each}}
   </section>
 
-  <section class="tile is-parent is-vertical is-6">
+  <section class="tile tile-is-flexible is-parent is-6">
     <article class="tile is-child is-flex-full">
       <h2 class="is-size-2">{{_p 'partners'}}</h2>
     </article>
 
     {{#each site.data.partners_sponsors.partners}}
-      <article class="tile is-child is-flex-one-third">
+      <article class="tile is-child is-flex-one-quarter">
         <a href="{{url}}" title="{{name}}" target="_blank">
           <img src="{{imgsrc image}}" alt="{{image_description}}"/>
         </a>
