--- a/themes/backendbrasil/layout/partials/menu.hbs
+++ b/themes/backendbrasil/layout/partials/menu.hbs
@@ -2,19 +2,19 @@
   <div class="navbar-brand">
     <a class="navbar-item be--navbar-item--logo has-text-weight-bold is-size-5" href="#">backend &lt;brasil&gt;</a>
 
-    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
+    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="mainMenu">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
     </a>
   </div>
 
-  <div class="navbar-menu" id="navMenu">
+  <div class="navbar-menu" id="mainMenu">
     <div class="navbar-end">
-      <a href="http://www.url.com" class="navbar-item has-text-weight-semibold is-uppercase">{{__ 'menu.about'}}</a>
-      <a href="http://www.url.com" class="navbar-item has-text-weight-semibold is-uppercase">{{__ 'menu.jobs'}}</a>
-      <a href="http://www.url.com" class="navbar-item has-text-weight-semibold is-uppercase">{{__ 'menu.blog'}}</a>
-      <a href="http://www.url.com" class="navbar-item has-text-weight-semibold be--navbar-item--join">
+      <a href="http://www.url.com" class="navbar-item is-uppercase">{{__ 'menu.about'}}</a>
+      <a href="http://www.url.com" class="navbar-item is-uppercase">{{__ 'menu.jobs'}}</a>
+      <a href="http://www.url.com" class="navbar-item is-uppercase">{{__ 'menu.blog'}}</a>
+      <a href="http://www.url.com" class="navbar-item be--navbar-item--join">
         <span class="icon"><i class="fab fa-github fa-lg"></i></span>
         {{__ 'menu.join'}}
       </a>
