--- a/themes/backendbrasil/layout/partials/footer.hbs
+++ b/themes/backendbrasil/layout/partials/footer.hbs
@@ -39,5 +39,24 @@
   </article>
 </section>
 
+<footer class="footer level has-default-padding">
+  <article class="level-left has-text-left">
+    <img src="/Logo-Horizontal.png" width="100"/>
+    <p>Produzido com pela comunidade</p>
+  </article>
+
+  <article class="level-right">
+    <nav class="navbar footer-links">
+      <div class="navbar-menu">
+        <a href="test" class="navbar-item">Quem Somos</a>
+        <a href="test" class="navbar-item">Vagas</a>
+        <a href="test" class="navbar-item">Blog</a>
+      </div>
+    </nav>
+
+    {{> buttons}}
+  </article>
+</footer>
+
 <script charset="utf-8" src="/all.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
