--- a/themes/backendbrasil/source/_scss/home.scss
+++ b/themes/backendbrasil/source/_scss/home.scss
@@ -1,17 +1,45 @@
 .home-header {
-  background-color: $bg;
-  padding-bottom: 3rem;
+  background-color: transparent;
+  position: relative;
+  overflow: hidden;
+  padding-top: 3rem;
+  padding-bottom: 8rem;
 
   p { margin-bottom: 1rem; }
 
-  .button {
-    margin-right: 1rem;
+  &:before {
+    // Misc
+    content: "";
 
-    i { padding-right: 0.5rem; }
+    // Magic
+    $bg-start-color: rgba(80,52,155,1);
+    $bg-middle-color: rgba(88,100,225,1);
+    $bg-end-color: rgba(91,115,249,1);
+    background: $bg-start-color;
+    background: -moz-linear-gradient(left, $bg-start-color 0%, $bg-middle-color 59%, $bg-end-color 100%);
+    background: -webkit-gradient(left top, right top, color-stop(0%, $bg-start-color), color-stop(59%, $bg-middle-color), color-stop(100%, $bg-end-color));
+    background: -webkit-linear-gradient(left, $bg-start-color 0%, $bg-middle-color 59%, $bg-end-color 100%);
+    background: -o-linear-gradient(left, $bg-start-color 0%, $bg-middle-color 59%, $bg-end-color 100%);
+    background: -ms-linear-gradient(left, $bg-start-color 0%, $bg-middle-color 59%, $bg-end-color 100%);
+    background: linear-gradient(to right, $bg-start-color 0%, $bg-middle-color 59%, $bg-end-color 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#50349b', endColorstr='#5b73f9', GradientType=1 );
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 88%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+
+    // Position and size stuff
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -10;
   }
 }
 
 .home-projects {
+  @extend %has-default-padding;
+  transform: translateY(-11rem);
+
   > .tile {
     margin-bottom: 2rem !important;
   }
@@ -22,6 +50,8 @@
 }
 
 .events {
+  @extend %has-default-padding;
+
   p {
     padding: 0.75rem 0;
   }
@@ -66,6 +96,8 @@
 }
 
 .posts {
+  @extend %has-default-padding;
+
   &--title {
     text-transform: uppercase;
     padding-bottom: 0.75rem;
@@ -87,6 +119,8 @@
 }
 
 .partners {
+  @extend %has-default-padding;
+
   .tile.is-flex-one-quarter {
     flex-grow: 0;
     flex-shrink: 0;
