--- a/themes/backendbrasil/source/main.scss
+++ b/themes/backendbrasil/source/main.scss
@@ -3,6 +3,7 @@
 @import '_scss/colors.scss';
 @import '_scss/bulma-modifications.scss';
 @import '_scss/components.scss';
+@import '_scss/buttons.scss';
 @import '_scss/menu.scss';
 @import '_scss/home.scss';
 @import '_scss/footer.scss';
